package NAntiRobot.NAntirobotSpravkaProto;

message TSpravkaData {
    optional bool DegradationWeb = 1;
    optional bool DegradationMarket = 2;
    optional bool DegradationUslugi = 3;
    optional bool DegradationAutoru = 4;
}
